--- a/pdf/static/html/pdf_edit.html
+++ b/pdf/static/html/pdf_edit.html
@@ -3,7 +3,7 @@
 
     <li class="field comp-setting-entry is-set">
       <div class="wrapper-comp-setting">
-        <label class="label setting-label" for="pdf_edit_display_name">Nom</label>
+        <label class="label setting-label" for="pdf_edit_display_name">Display Name</label>
         <input class="input setting-input" id="pdf_edit_display_name" value="{{ display_name }}" type="text">
       </div>
       <span class="tip setting-help">This name appears in the horizontal navigation at the top of the page.</span>
@@ -14,7 +14,7 @@
         <label class="label setting-label" for="pdf_edit_url">PDF URL</label>
         <input class="input setting-input" id="pdf_edit_url" value="{{ url }}" type="text">
       </div>
-      <span class="tip setting-help">L’URL du fichier PDF</span>
+      <span class="tip setting-help">The URL for your PDF</span>
     </li>
 
     <li class="field comp-setting-entry is-set">
@@ -25,7 +25,7 @@
           <option value="False" {% if not allow_download %}selected{% endif %}>False</option>
         </select>
       </div>
-      <span class="tip setting-help">Display a download button for this PDF.</span>
+      <span class="tip setting-help">Add a download link for the source file of your PDF. Use it for example to provide the PowerPoint file used to create this PDF..</span>
     </li>
 
     <li class="field comp-setting-entry is-set">
@@ -37,7 +37,7 @@
         <label class="label setting-label" for="pdf_edit_source_url">Source document URL</label>
         <input class="input setting-input" id="pdf_edit_source_url" value="{{ source_url }}" type="text">
       </div>
-      <span class="tip setting-help">Ajouter le document source de votre PDF (fichier Powerpoint, …)</span>
+      <span class="tip setting-help">Display a download button for this PDF. </span>
     </li>
 
   </ul>
@@ -45,10 +45,10 @@
   <div class="xblock-actions">
     <ul>
       <li class="action-item">
-        <a href="#" class="button action-primary action-save">Enregistrer</a>
+        <a href="#" class="button action-primary action-save">Save</a>
       </li>
       <li class="action-item">
-        <a href="#" class="button action-cancel">Annuler</a>
+        <a href="#" class="button action-cancel">Cancel</a>
       </li>
     </ul>
   </div>
